[package]
name = "compile"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4"
simple_logger = "1"
compact_str = { version = "0.8.0", features = [] }
smallvec = { version = "1.13", features = ["union", "const_generics", "const_new"] }
thiserror = "1.0"
itertools = "0.13"
proc-macro2 = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true