[package]
name = "helper_rlib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lazy-regex = "3.3"
smallvec = { version = "1.13", features = ["union"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
compact_str = { version = "0.8", features = ["serde", "smallvec"] }
chrono = "0.4"
serde_derive = { version = "1.0" }
