[package]
name = "permute_front"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
log = "0.4"
thiserror = "1.0"
smallvec = { version = "1.13", features = ["serde", "union", "const_generics", "const_new"] }
compact_str = { version = "0.8.0", features = ["serde"] }

# Working with Rust code parsing, unparsing and formatting.
syn = { version = "2.0", features = ["clone-impls", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
rust-format = { version = "0.3", features = ["pretty_please", "token_stream"] }

[dev-dependencies]
fern = { version = "0.7", features = ["colored"] }
humantime = "2.1"
