[package]
name = "permute_libcore"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_xorshift = { version = "0.3.0", default-features = false }

[features]
# Make panics and failed asserts immediately abort without formatting any message
panic_immediate_abort = []
# Choose algorithms that are optimized for binary size instead of runtime performance
optimize_for_size = []
# Make `RefCell` store additional debugging information, which is printed out when
# a borrow error occurs
debug_refcell = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(bootstrap)',
    'cfg(no_fp_fmt_parse)',
    'cfg(stdarch_intel_sde)',
    # core use #[path] imports to portable-simd `core_simd` crate
    # and to stdarch `core_arch` crate which messes-up with Cargo list
    # of declared features, we therefor expect any feature cfg
    'cfg(feature, values(any()))',
]
